--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@stitches/core": "^1.0.0",
-    "vue": "^3.2.6"
+    "vue": "^3.2.6",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
